--- a/STANDARD/index.html
+++ b/STANDARD/index.html
@@ -95,6 +95,8 @@
     <script src="assets/js/controllers/API/bootstrapCtrl.js"></script>
     <script src="assets/js/controllers/API/MyCtrl.js"></script>
     <script src="assets/js/controllers/API/LivreurCtrl.js"></script>
+    <script src="assets/js/controllers/API/produitCtrl.js"></script>
+    <script src="assets/js/controllers/API/personnelCtrl.js"></script>
 
 </body>
 
