--- a/STANDARD/index.html
+++ b/STANDARD/index.html
@@ -97,6 +97,7 @@
     <script src="assets/js/controllers/API/LivreurCtrl.js"></script>
     <script src="assets/js/controllers/API/produitCtrl.js"></script>
     <script src="assets/js/controllers/API/personnelCtrl.js"></script>
+    <script src="assets/js/controllers/sweetAlertCtrl.js"></script>
 
 </body>
 
