--- a/STANDARD/index.html
+++ b/STANDARD/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="assets/css/plugins.css">
     <!-- Clip-Two Theme -->
     <link rel="stylesheet" data-ng-href="assets/css/themes/{{ app.layout.theme }}.css" />
+    <!-- <script src="https://code.angularjs.org/1.0.2/i18n/angular-locale_fr-fr.js"></script> -->
 </head>
 
 <body ng-controller="AppCtrl">
@@ -67,6 +68,9 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/config.constant.js"></script>
     <script src="assets/js/config.router.js"></script>
+    <!-- <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.js"></script> -->
+    <!-- <script src="http://code.angularjs.org/1.0.8/i18n/angular-locale_fr-fr.js"></script> -->
+    <!-- <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.6.0.js"></script> -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPf_mlcbgT1ZaUuEqX2W4ozPygrYSZ8Wk" type="text/javascript"></script>
     <!-- Clip-Two Directives -->
     <script src="assets/js/directives/toggle.js"></script>
