--- a/STANDARD/index.html
+++ b/STANDARD/index.html
@@ -102,6 +102,8 @@
     <script src="assets/js/controllers/API/produitCtrl.js"></script>
     <script src="assets/js/controllers/API/personnelCtrl.js"></script>
     <script src="assets/js/controllers/sweetAlertCtrl.js"></script>
+    <script src="assets/pdfjs/jspdf.js"></script>
+    <script src="assets/pdfjs/pdfFromHTML.js"></script>
 
 </body>
 
