--- a/STANDARD/index.html
+++ b/STANDARD/index.html
@@ -46,6 +46,9 @@
     <script src="../bower_components/angular-touch/angular-touch.min.js"></script>
     <script src="../bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <!-- Epson File -->
+    <!-- <script type="text/javascript" src="assets/ePOS_SDK_Sample_JavaScript\epos-2.7.0.js"></script> -->
+    <script src="assets/epos-2.7.0.js"></script>
     <!-- Angular storage -->
     <script src="../bower_components/ngstorage/ngStorage.min.js"></script>
     <!-- Angular Translate -->
